--- a/competitive-platform-skeleton/leaderboard.html
+++ b/competitive-platform-skeleton/leaderboard.html
@@ -11,6 +11,29 @@
         .hidden {
             display: none !important;
         }
+
+        /* Rank Specific Styles */
+        .rank-1 td {
+            color: #fbbf24;
+            text-shadow: 0 0 10px rgba(251, 191, 36, 0.4);
+        }
+
+        /* Gold */
+        .rank-2 td {
+            color: #94a3b8;
+        }
+
+        /* Silver */
+        .rank-3 td {
+            color: #b45309;
+        }
+
+        /* Bronze */
+
+        .rank-1 .avatar {
+            border-color: #fbbf24;
+            box-shadow: 0 0 15px rgba(251, 191, 36, 0.3);
+        }
     </style>
 </head>
 
@@ -25,29 +48,38 @@
     </nav>
 
     <main class="container p-8">
-        <div class="flex justify-between items-end mb-8">
+        <div class="flex justify-between items-end mb-8 mt-4">
             <div>
-                <h1 class="mb-2">Leaderboard</h1>
-                <p>Global Rankings (Top 10)</p>
+                <div class="text-xs text-primary uppercase tracking-[0.2em] mb-2 font-bold">Global Rankings</div>
+                <h1 class="mb-2 text-4xl">Leaderboard</h1>
+            </div>
+            <div class="text-right hidden md:block">
+                <div class="text-muted text-sm">Season 1</div>
             </div>
         </div>
 
-        <div class="card p-0 overflow-hidden">
+        <div class="card p-0 overflow-hidden border-glass bg-opacity-40">
             <table class="table" id="leaderboardTable">
                 <thead>
-                    <tr>
-                        <th class="w-12">Rank</th>
-                        <th>Player ID</th>
-                        <th>Matches</th>
-                        <th class="text-right">SR (Skill Rating)</th>
+                    <tr class="bg-white bg-opacity-5">
+                        <th class="w-24 pl-8">Rank</th>
+                        <th>Player</th>
+                        <th class="text-center">Matches</th>
+                        <th class="text-right pr-8">Skill Rating</th>
                     </tr>
                 </thead>
                 <tbody id="leaderboardBody">
                     <tr>
-                        <td colspan="4" class="text-center p-8">Loading rankings...</td>
+                        <td colspan="4" class="text-center p-12 text-muted">
+                            <div class="animate-pulse">Retrieving global data...</div>
+                        </td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+
+        <div class="mt-8 text-center text-sm text-muted">
+            Top 100 players shown. Updates live.
         </div>
     </main>
 
@@ -55,31 +87,49 @@
         import { getLeaderboard } from './js/data.js';
 
         async function loadLeaderboard() {
-            const data = await getLeaderboard();
-            const tbody = document.getElementById('leaderboardBody');
-            tbody.innerHTML = '';
+            try {
+                const data = await getLeaderboard();
+                const tbody = document.getElementById('leaderboardBody');
+                tbody.innerHTML = '';
 
-            if (data.length === 0) {
-                tbody.innerHTML = '<tr><td colspan="4" class="text-center p-8">No ranked players yet. Be the first!</td></tr>';
-                return;
+                if (!data || data.length === 0) {
+                    tbody.innerHTML = '<tr><td colspan="4" class="text-center p-12 text-muted">No ranked players yet. Be the first to play!</td></tr>';
+                    return;
+                }
+
+                data.forEach((user, index) => {
+                    let tierClass = "tier-rookie";
+                    if (user.sr > 1200) tierClass = "tier-challenger";
+                    if (user.sr > 1500) tierClass = "tier-strategist";
+                    if (user.sr > 2000) tierClass = "tier-apex";
+
+                    const rankClass = index < 3 ? `rank-${index + 1}` : '';
+                    const rankDisplay = index < 3 ? ['🥇', '🥈', '🥉'][index] : index + 1;
+
+                    // Simple avatar generator if no name
+                    const name = user.hostName || user.id.substring(0, 8);
+                    const avatarLetter = name.charAt(0).toUpperCase();
+
+                    tbody.innerHTML += `
+                        <tr class="${rankClass} hover:bg-white hover:bg-opacity-5 transition-colors">
+                            <td class="font-bold text-lg pl-8">${rankDisplay}</td>
+                            <td>
+                                <div class="flex items-center gap-3">
+                                    <div class="avatar w-8 h-8 text-xs">${avatarLetter}</div>
+                                    <span class="font-mono text-sm">${name}</span>
+                                </div>
+                            </td>
+                            <td class="text-center text-muted">${user.matchesPlayed || 0}</td>
+                            <td class="text-right font-mono font-bold pr-8">
+                                <span class="badge ${tierClass}" style="font-size: 0.9em;">${user.sr || 0} SR</span>
+                            </td>
+                        </tr>
+                    `;
+                });
+            } catch (e) {
+                console.error(e);
+                document.getElementById('leaderboardBody').innerHTML = '<tr><td colspan="4" class="text-center p-8 text-danger">Error loading leaderboard. check console.</td></tr>';
             }
-
-            data.forEach((user, index) => {
-                let tierClass = "tier-rookie";
-                if (user.sr > 1500) tierClass = "tier-strategist";
-                if (user.sr > 2000) tierClass = "tier-apex";
-
-                tbody.innerHTML += `
-                    <tr>
-                        <td class="font-bold text-lg">${index + 1}</td>
-                        <td>${user.id.substring(0, 6)}...</td>
-                        <td>${user.matchesPlayed}</td>
-                        <td class="text-right font-mono font-bold">
-                            <span class="badge ${tierClass}">${user.sr || 0}</span>
-                        </td>
-                    </tr>
-                `;
-            });
         }
 
         loadLeaderboard();
