--- a/competitive-platform-skeleton/results.html
+++ b/competitive-platform-skeleton/results.html
@@ -13,71 +13,116 @@
     <nav class="navbar">
         <div class="container flex justify-between items-center">
             <a href="index.html" class="nav-logo">ZENOA</a>
-            <a href="dashboard.html" class="btn btn-secondary text-sm">Dashboard</a>
+            <a href="dashboard.html" class="btn btn-secondary text-sm">Return to Command</a>
         </div>
     </nav>
 
-    <main class="container p-8 flex flex-col items-center">
-        <div class="text-center mb-8">
-            <div class="text-primary font-bold tracking-widest uppercase text-sm mb-2">Analysis Complete</div>
-            <h1 class="mb-2">Decision Profile</h1>
+    <main class="container p-8 flex flex-col items-center justify-center min-h-[80vh]">
+        <div class="text-center mb-8 animate-slide-up">
+            <div class="text-success font-bold tracking-[0.3em] uppercase text-xs mb-3 shadow-glow">Analysis Complete
+            </div>
+            <h1 class="mb-2 text-glow">Decision Profile</h1>
         </div>
 
-        <div class="card p-8 mb-8 w-full max-w-2xl">
-            <div class="flex justify-between items-center mb-8 border-b pb-8 border-gray-100">
+        <div class="card p-8 mb-8 w-full max-w-3xl animate-slide-up" style="animation-delay: 0.1s;">
+            <!-- Header Result -->
+            <div class="flex justify-between items-center mb-10 border-b border-glass pb-8">
                 <div>
-                    <div class="text-sm text-muted uppercase">Your Choice</div>
-                    <div class="font-bold text-lg" id="resultOption">...</div>
+                    <div class="text-xs text-muted uppercase tracking-widest mb-1">Your Selection</div>
+                    <div class="font-bold text-3xl text-gradient" id="resultOption">...</div>
                 </div>
                 <div class="text-right">
-                    <div class="badge tier-strategist mb-1" id="resultStyle">...</div>
-                    <div class="text-sm text-muted">Alignment</div>
+                    <div class="badge tier-architect mb-2 text-lg px-4 py-2" id="resultStyle"
+                        style="background: rgba(139, 92, 246, 0.2); border-color: var(--secondary);">...</div>
+                    <div class="text-xs text-muted uppercase">Strategic Alignment</div>
                 </div>
             </div>
 
-            <div class="grid grid-2 gap-8 mb-8">
+            <!-- Stats Grid -->
+            <div class="grid grid-2 gap-12 mb-10">
+                <!-- Cohort -->
                 <div>
-                    <h3 class="text-sm uppercase text-muted mb-4">Cohort Comparison</h3>
-                    <div class="flex items-center gap-4 mb-2">
-                        <div class="font-bold text-2xl">42%</div>
-                        <div class="text-sm text-muted">of players chose this path.</div>
+                    <h3 class="text-xs uppercase text-muted mb-4 tracking-widest">Global Cohort</h3>
+                    <div class="flex items-end gap-4 mb-3">
+                        <div class="font-bold text-5xl text-white" id="statPercentage">--%</div>
+                        <div class="text-sm text-muted pb-2 w-32 leading-tight" id="statText">Calculating network
+                            data...</div>
                     </div>
-                    <div class="progress-track">
-                        <div class="progress-fill" style="width: 42%; background: var(--primary-color);"></div>
+                    <div class="progress-track bg-opacity-10 bg-white h-2">
+                        <div class="progress-fill" id="statBar" style="width: 0%; background: var(--primary);">
+                        </div>
                     </div>
                 </div>
+
+                <!-- Speed -->
                 <div>
-                    <h3 class="text-sm uppercase text-muted mb-4">Speed Impact</h3>
-                    <div class="flex items-center gap-4 mb-2">
-                        <div class="font-bold text-2xl" id="timeValue">...s</div>
-                        <div class="text-sm text-muted">Response time</div>
+                    <h3 class="text-xs uppercase text-muted mb-4 tracking-widest">Reaction Speed</h3>
+                    <div class="flex items-end gap-4 mb-3">
+                        <div class="font-bold text-5xl text-white" id="timeValue">...s</div>
+                        <div class="text-sm text-muted pb-2">Response time</div>
                     </div>
-                    <div class="progress-track">
-                        <div class="progress-fill" style="width: 85%; background: var(--tier-apex);"></div>
+                    <div class="progress-track bg-opacity-10 bg-white h-2">
+                        <div class="progress-fill"
+                            style="width: 85%; background: var(--success); box-shadow: 0 0 10px var(--success);"></div>
                     </div>
                 </div>
             </div>
 
-            <div class="card p-4 w-full max-w-2xl mb-8 flex justify-between items-center bg-gray-50 border-0">
-                <span class="font-bold">Progress Updated</span>
-                <span class="badge tier-strategist">+25 SR</span>
+            <!-- Reward Footer -->
+            <div
+                class="card p-6 w-full flex justify-between items-center bg-gradient-to-r from-transparent via-white/5 to-transparent border-glass">
+                <div class="flex items-center gap-3">
+                    <span class="text-2xl">⚡</span>
+                    <span class="font-bold text-lg">Sequence Complete</span>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="text-success font-bold text-xl">+25</span>
+                    <span class="text-muted text-sm uppercase">Skill Rating</span>
+                </div>
             </div>
         </div>
 
-        <div class="flex gap-4">
-            <a href="leaderboard.html" class="btn btn-secondary">Global Data</a>
-            <a href="dashboard.html" class="btn btn-primary">My Dashboard</a>
+        <div class="flex gap-4 animate-slide-up" style="animation-delay: 0.2s;">
+            <a href="leaderboard.html" class="btn btn-secondary border-glass hover:bg-white/5">Global Leaderboard</a>
+            <a href="dashboard.html" class="btn btn-primary px-8">Next Scenario</a>
         </div>
     </main>
 
     <script type="module">
+        import { getQuestionStats } from './js/data.js';
+
         // Load data passed from play.html via localStorage
         const result = JSON.parse(localStorage.getItem('lastResult'));
 
         if (result) {
             document.getElementById('resultStyle').textContent = result.style;
-            document.getElementById('resultOption').textContent = `Option ${result.option}`;
+            document.getElementById('resultOption').innerHTML = `Option <span class="text-white">${result.option}</span>`;
             document.getElementById('timeValue').textContent = `${result.time}s`;
+
+            // Fetch Real Stats
+            getQuestionStats('sc-01').then(stats => {
+                const count = stats.counts[result.option] || 0;
+                const total = stats.total;
+
+                let percentage = 0;
+                let text = "First responder data.";
+
+                if (total > 0) {
+                    percentage = Math.round((count / total) * 100);
+                    text = `of ${total} players chose this path.`;
+                } else {
+                    percentage = 100; // You are the first
+                    text = "You set the precedent.";
+                }
+
+                document.getElementById('statPercentage').textContent = `${percentage}%`;
+                document.getElementById('statText').innerHTML = text;
+                const bar = document.getElementById('statBar');
+                bar.style.width = `0%`; // Reset first
+                setTimeout(() => {
+                    bar.style.width = `${percentage}%`;
+                }, 100);
+            });
         }
     </script>
 </body>
