--- a/competitive-platform-skeleton/rounds.html
+++ b/competitive-platform-skeleton/rounds.html
@@ -39,11 +39,11 @@
 
     <script type="module">
         import { auth } from './js/firebase.js';
-        import { getLeaderboard, getUserProfile } from './js/data.js';
+        import { getLeaderboard } from './js/data.js';
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
         async function loadCohort() {
-            // Using leaderboard as a proxy for "Cohort" to show real data
+            // Using leaderboard as a proxy for "Cohort"
             const data = await getLeaderboard();
             const container = document.getElementById('cohortTable');
             container.innerHTML = '';
@@ -53,16 +53,18 @@
                 return;
             }
 
-            // Randomize "Decision Style" to simulate variety for the demo effect, 
-            // since we don't store individual game styles in the stats summary yet.
-            const styles = ["Pragmatic", "Cautious", "Idealist", "Aggressive", "Balanced"];
+            // Show Top 5 Real Users
+            const topUsers = data.slice(0, 5);
 
-            // Show Top 3 + Current User
-            const top3 = data.slice(0, 3);
+            topUsers.forEach((user, i) => {
+                // Use REAL decision styles from their profile if available, else "Unknown"
+                // We don't want to fake it anymore.
+                const lastStyle = (user.decisionStyles && user.decisionStyles.length > 0)
+                    ? user.decisionStyles[user.decisionStyles.length - 1]
+                    : "Unranked";
 
-            top3.forEach((user, i) => {
-                const style = styles[Math.floor(Math.random() * styles.length)];
                 const isMe = auth.currentUser && auth.currentUser.uid === user.id;
+                const displayName = isMe ? "You" : `Player ${user.id.substring(0, 4)}`;
 
                 container.innerHTML += `
                     <tr style="${isMe ? 'background: #f8fafc;' : ''}">
@@ -70,12 +72,12 @@
                         <td>
                             <div class="flex items-center gap-2">
                                 <div class="avatar w-6 h-6 text-xs" style="background: ${isMe ? 'var(--primary-color)' : '#94a3b8'};">
-                                    ${(user.id).substring(0, 2).toUpperCase()}
+                                    ${displayName.substring(0, 1)}
                                 </div>
-                                ${isMe ? 'You' : `Player ${user.id.substring(0, 4)}`}
+                                ${displayName}
                             </div>
                         </td>
-                        <td class="text-right font-bold"><span class="tag-decision">${style}</span></td>
+                        <td class="text-right font-bold"><span class="tag-decision capitalize">${lastStyle}</span></td>
                     </tr>
                  `;
             });
