--- a/profile.html
+++ b/profile.html
@@ -22,73 +22,112 @@
             </nav>
         </header>
 
-        <main style="padding-top: 3rem; max-width: 800px; margin: 0 auto;">
-            <div class="card" style="margin-bottom: 2rem;">
-                <h1 id="user-name" style="margin-bottom: 0.5rem;">Loading...</h1>
-                <p id="user-college" style="font-size: 1.2rem; color: var(--accent-color);">...</p>
-                <div style="display: flex; gap: 2rem; margin-top: 2rem;">
-                    <div>
-                        <div style="font-size: 2.5rem; font-weight: 700;" id="matches-played">0</div>
-                        <div style="font-size: 0.9rem; color: var(--text-secondary); text-transform: uppercase;">Matches
-                        </div>
-                    </div>
+        <main style="padding-top: 3rem; max-width: 900px; margin: 0 auto;">
+
+            <!-- Header Card -->
+            <div class="card"
+                style="margin-bottom: 2rem; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
+                <div>
+                    <h1 id="user-name" style="margin-bottom: 0.5rem; font-size: 2.5rem;">...</h1>
+                    <p id="user-college" style="font-size: 1.1rem; color: var(--text-secondary); margin-bottom: 0;">
+                        Loading profile...</p>
+                </div>
+                <div style="text-align: right;">
+                    <div id="dominant-type" style="font-size: 1.8rem; font-weight: 700; color: var(--accent-color);">
+                        Unknown Type</div>
+                    <div
+                        style="font-size: 0.9rem; letter-spacing: 1px; text-transform: uppercase; color: var(--text-secondary);">
+                        Dominant Intelligence</div>
                 </div>
             </div>
 
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
+                <!-- Intelligence Breakdown -->
                 <div class="card">
-                    <h2>Stats</h2>
-                    <div style="display: flex; flex-direction: column; gap: 1rem;">
+                    <h2>Intelligence Profile</h2>
+                    <p style="font-size: 0.9rem; margin-bottom: 1.5rem;">Relative strength across 5 competence domains.
+                    </p>
+
+                    <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+                        <!-- Logical -->
                         <div>
-                            <div style="display: flex; justify-content: space-between;">
-                                <span>Consistency</span>
-                                <span id="stat-consistency">0</span>
+                            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
+                                <span>Logical</span>
+                                <span id="val-logical" style="font-weight: 600;">0</span>
                             </div>
                             <div
-                                style="background: var(--surface-hover); height: 6px; border-radius: 3px; margin-top: 5px; overflow: hidden;">
-                                <div id="bar-consistency"
-                                    style="background: var(--success-color); height: 100%; width: 0%;"></div>
-                            </div>
-                        </div>
-                        <div>
-                            <div style="display: flex; justify-content: space-between;">
-                                <span>Speed</span>
-                                <span id="stat-speed">0</span>
-                            </div>
-                            <div
-                                style="background: var(--surface-hover); height: 6px; border-radius: 3px; margin-top: 5px; overflow: hidden;">
-                                <div id="bar-speed" style="background: var(--accent-color); height: 100%; width: 0%;">
+                                style="background: var(--surface-hover); height: 8px; border-radius: 4px; overflow: hidden;">
+                                <div id="bar-logical" style="background: var(--text-primary); height: 100%; width: 0%;">
                                 </div>
                             </div>
                         </div>
+                        <!-- Strategic -->
                         <div>
-                            <div style="display: flex; justify-content: space-between;">
-                                <span>Adaptability</span>
-                                <span id="stat-adaptability">0</span>
+                            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
+                                <span>Strategic</span>
+                                <span id="val-strategic" style="font-weight: 600;">0</span>
                             </div>
                             <div
-                                style="background: var(--surface-hover); height: 6px; border-radius: 3px; margin-top: 5px; overflow: hidden;">
-                                <div id="bar-adaptability"
-                                    style="background: var(--text-primary); height: 100%; width: 0%;"></div>
+                                style="background: var(--surface-hover); height: 8px; border-radius: 4px; overflow: hidden;">
+                                <div id="bar-strategic"
+                                    style="background: var(--accent-color); height: 100%; width: 0%;"></div>
                             </div>
                         </div>
+                        <!-- Social -->
                         <div>
-                            <div style="display: flex; justify-content: space-between;">
+                            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
                                 <span>Social</span>
-                                <span id="stat-social">0</span>
+                                <span id="val-social" style="font-weight: 600;">0</span>
                             </div>
                             <div
-                                style="background: var(--surface-hover); height: 6px; border-radius: 3px; margin-top: 5px; overflow: hidden;">
-                                <div id="bar-social" style="background: #eab308; height: 100%; width: 0%;"></div>
+                                style="background: var(--surface-hover); height: 8px; border-radius: 4px; overflow: hidden;">
+                                <div id="bar-social" style="background: var(--success-color); height: 100%; width: 0%;">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Political -->
+                        <div>
+                            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
+                                <span>Political</span>
+                                <span id="val-political" style="font-weight: 600;">0</span>
+                            </div>
+                            <div
+                                style="background: var(--surface-hover); height: 8px; border-radius: 4px; overflow: hidden;">
+                                <div id="bar-political" style="background: #a855f7; height: 100%; width: 0%;"></div>
+                            </div>
+                        </div>
+                        <!-- Adaptive -->
+                        <div>
+                            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
+                                <span>Adaptive</span>
+                                <span id="val-adaptive" style="font-weight: 600;">0</span>
+                            </div>
+                            <div
+                                style="background: var(--surface-hover); height: 8px; border-radius: 4px; overflow: hidden;">
+                                <div id="bar-adaptive" style="background: #f59e0b; height: 100%; width: 0%;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="card">
-                    <h2>Badges</h2>
-                    <div id="badges-container" style="display: flex; flex-wrap: wrap; gap: 1rem;">
-                        <p style="font-style: italic; opacity: 0.5;">No badges earned yet.</p>
+                <!-- Badges & Stats -->
+                <div style="display: flex; flex-direction: column; gap: 2rem;">
+                    <div class="card">
+                        <h2>Career Data</h2>
+                        <div style="display: flex; gap: 2rem; margin-top: 1rem;">
+                            <div>
+                                <div id="matches-played" style="font-size: 2.5rem; font-weight: 700;">0</div>
+                                <div style="font-size: 0.8rem; text-transform: uppercase;">Matches</div>
+                            </div>
+                            <!-- Future: Add Win Rate or Average Rank here -->
+                        </div>
+                    </div>
+
+                    <div class="card" style="flex: 1;">
+                        <h2>Badges</h2>
+                        <div id="badges-container" style="display: flex; flex-wrap: wrap; gap: 1rem; margin-top: 1rem;">
+                            <!-- Badges -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -111,19 +150,27 @@
                     document.getElementById('user-name').textContent = profile.username;
                     document.getElementById('user-college').textContent = profile.college;
                     document.getElementById('matches-played').textContent = profile.matchesPlayed;
+                    document.getElementById('dominant-type').textContent = profile.dominantType || "Unranked";
 
                     // Stats
-                    const stats = profile.stats || {};
-                    const updateStat = (key, color) => {
+                    const stats = profile.intelligence || {};
+                    // Find Max for scaling bars
+                    const maxVal = Math.max(
+                        stats.logical || 0, stats.strategic || 0, stats.social || 0, stats.political || 0, stats.adaptive || 0, 1
+                    );
+
+                    const updateStat = (key) => {
                         const val = stats[key] || 0;
-                        document.getElementById(`stat-${key}`).textContent = val;
-                        document.getElementById(`bar-${key}`).style.width = `${Math.min(val, 100)}%`;
+                        document.getElementById(`val-${key}`).textContent = val;
+                        const pct = (val / maxVal) * 100;
+                        document.getElementById(`bar-${key}`).style.width = `${pct}%`;
                     };
 
-                    updateStat('consistency');
-                    updateStat('speed');
-                    updateStat('adaptability');
+                    updateStat('logical');
+                    updateStat('strategic');
                     updateStat('social');
+                    updateStat('political');
+                    updateStat('adaptive');
 
                     // Badges
                     const badgesContainer = document.getElementById('badges-container');
@@ -131,14 +178,17 @@
                         badgesContainer.innerHTML = '';
                         profile.badges.forEach(badge => {
                             const badgeEl = document.createElement('span');
-                            badgeEl.style.padding = '0.25rem 0.75rem';
+                            badgeEl.style.padding = '0.5rem 1rem';
                             badgeEl.style.backgroundColor = 'var(--surface-hover)';
                             badgeEl.style.borderRadius = '20px';
                             badgeEl.style.fontSize = '0.9rem';
                             badgeEl.style.border = '1px solid var(--border-color)';
+                            badgeEl.style.fontWeight = '500';
                             badgeEl.textContent = badge;
                             badgesContainer.appendChild(badgeEl);
                         });
+                    } else {
+                        badgesContainer.innerHTML = '<p style="font-style: italic; opacity: 0.5;">No badges earned yet.</p>';
                     }
                 }
             }
