--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,8 @@
             style="display: flex; justify-content: space-between; align-items: center; padding: 2rem 0; border-bottom: 1px solid var(--border-color);">
             <div style="font-weight: 700; font-size: 1.5rem;">ZENOA</div>
             <nav style="display: flex; gap: 1rem;">
+                <a href="leaderboard.html" class="btn btn-secondary"
+                    style="padding: 0.5rem 1rem; font-size: 0.9rem;">Rankings</a>
                 <a href="profile.html" class="btn btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">My
                     Profile</a>
                 <button id="logout-btn" class="btn btn-secondary"
