--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,10 @@
                     <input type="text" id="college" required placeholder="e.g. MIT, Hogwarts">
                 </div>
                 <div class="form-group">
+                    <label for="city">City</label>
+                    <input type="text" id="city" required placeholder="e.g. Gotham, New York">
+                </div>
+                <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" required>
                 </div>
@@ -51,10 +55,11 @@
             e.preventDefault();
             const username = document.getElementById('username').value;
             const college = document.getElementById('college').value;
+            const city = document.getElementById('city').value;
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            signUpUser(email, password, username, college);
+            signUpUser(email, password, username, college, city);
         });
     </script>
 </body>
